terraform/Ec2.tf
resource "aws_instance" "wordpress_server" {
  ami = "ami-0fc5d935ebf8bc3bc"

  instance_type = var.instance_type

  subnet_id = aws_subnet.public_subnet.id

  key_name = var.key_name

  vpc_security_group_ids = [
    aws_security_group.ec2_sg.id
  ]

  iam_instance_profile = aws_iam_instance_profile.ec2_profile.name

  tags = {
    Name = "wordpress-server"
  }
}
