terraform/networking.tf
#######################################
# VPC
#######################################

resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr

  enable_dns_support = true

  enable_dns_hostnames = true

  tags = {
    Name = "enterprise-vpc"
  }
}

#######################################
# PUBLIC SUBNET
#######################################

resource "aws_subnet" "public_subnet" {
  vpc_id = aws_vpc.main.id

  cidr_block = var.public_subnet_cidr

  map_public_ip_on_launch = true

  availability_zone = "${var.aws_region}a"

  tags = {
    Name = "public-subnet"
  }
}

#######################################
# PRIVATE SUBNET
#######################################

resource "aws_subnet" "private_subnet" {
  vpc_id = aws_vpc.main.id

  cidr_block = var.private_subnet_cidr

  availability_zone = "${var.aws_region}b"

  tags = {
    Name = "private-subnet"
  }
}
#######################################
# SECOND PRIVATE SUBNET
#######################################

resource "aws_subnet" "private_subnet_2" {
  vpc_id = aws_vpc.main.id

  cidr_block = "10.0.3.0/24"

  availability_zone = "${var.aws_region}c"

  tags = {
    Name = "private-subnet-2"
  }
}

#######################################
# INTERNET GATEWAY
#######################################

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "enterprise-igw"
  }
}

#######################################
# ROUTE TABLE
#######################################

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "public-route-table"
  }
}

#######################################
# ROUTE TABLE ASSOCIATION
#######################################

resource "aws_route_table_association" "public_assoc" {
  subnet_id = aws_subnet.public_subnet.id

  route_table_id = aws_route_table.public_rt.id
}
